try 5.6 changes in some logic